crustrace-core/tests/snapshots/negative__basic_function_gets_instrumented.snap
---
source: crustrace-core/tests/negative.rs
expression: apply_trace_all(input)
---
fn real_function() {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "real_function");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    {
        println!("Real function");
    }
}
