crustrace-core/tests/snapshots/negative__trait_method_declarations.snap
---
source: crustrace-core/tests/negative.rs
expression: apply_trace_all(input)
---
trait MyTrait {
    fn trait_method(&self);
    fn default_method(&self) {
        let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "default_method");
        let __tracing_attr_guard = __tracing_attr_span.enter();
        {
            println!("This has a body and should be instrumented");
        }
    }
}
